--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container-xl d-flex flex-column min-vh-100 border-start border-end p-0">
     <navbar class="sticky-top"></navbar>
 
+    <home-header class="overflow-hidden"></home-header>
+
     <footer class="mt-auto"></footer>
 </div>
