--- a/src/app/home-header/home-header.component.html
+++ b/src/app/home-header/home-header.component.html
@@ -1,8 +1,8 @@
 <div class="row justify-content-center">
     <div class="col-xl-5 col-md-6 col-sm-8 col-10 my-4">
         <div class="input-group">
-            <span class="input-group-text py-2" id="inputGroup-sizing-default">SearchForAMovie</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <span class="input-group-text py-2 border-dark" id="inputGroup-sizing-default">SearchForAMovie</span>
+            <input type="text" class="form-control border-dark" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" (keyup)="keyUp.next($event)" [(ngModel)]="MovieNameSearch">
           </div>
     </div>
 </div>
