--- a/src/app/home-movies/home-movies.component.html
+++ b/src/app/home-movies/home-movies.component.html
@@ -1,12 +1,17 @@
 <div class="row gap-3 justify-content-center mb-4">
-    <div class="card px-0 col-xl-2 col-md-3 col-sm-4 col-5" *ngFor="let m of Movies">
-      <a class="text-decoration-none text-dark" [routerLink]="['movie', m.id]">
+  <div class="card px-0 col-xl-2 col-md-3 col-sm-4 col-5" *ngFor="let m of Movies">
+    <a class="text-decoration-none text-dark" [routerLink]="['movie', m.id]">
       <img src="{{ url + m.poster_path }}" class="card-img-top img-fluid">
       <div class="card-body">
         <h5 class="card-title">{{ m.title }}</h5>
-        <p><strong>Published: </strong>{{ m.release_date }}</p>
-        <a [routerLink]="['movie', m.id]" class="btn btn-dark">View More</a>
+        <p>Published: {{ m.release_date }}</p>
       </div>
-      </a>
-    </div>
+    </a>
   </div>
+</div>
+
+<div class="row justify-content-center mb-4">
+  <div class="col-xl-6 col-sm-8 col-11">
+    <a class="btn btn-dark rounded py-2 w-100" (click)="IncPage()">Load More</a>
+  </div>
+</div>
