--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
     <home-header class="overflow-hidden" (Movie)="getMovieByName($event)"></home-header>
 
-    <home-movies [Movies]="AllMovies" class="overflow-hidden"></home-movies>
+    <home-movies [Movies]="AllMovies" class="overflow-hidden" (MSG)="UpdateMoviesArray($event)" ></home-movies>
 
     <footer class="mt-auto"></footer>
 </div>
