updated logo width

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="container-xl navbar navbar-expand-xl bg-body-tertiary border-bottom">
     <div class="mx-auto">
         <a class="navbar-brand d-flex py-0" href="/AngularMoviesProjectOnline/">
-            <img class="img-fluid" style="width: 80px;" src="./assets/logo.png" />
+            <img class="img-fluid" style="width: 4.0625rem;" src="./assets/logo.png" />
             <p class="my-auto fs-4">MoviesToWatch</p>
         </a>
     </div>
